added POST to the program
