# route/user.js
@@ -6,7 +6,7 @@ const route = express.Router();
 route.get('/', userController.getUsers);
 route.get('/:id', userController.getUser);
 
-// route.post('/', userController.createUser);
+route.post('/', userController.createUser);
 
 // route.put('/:id', userController.updateUser);
 // route.delete('/:id', userController.deleteUser);
